--- a/src/styles/themes/event.scss
+++ b/src/styles/themes/event.scss
@@ -112,11 +112,11 @@
 
   .firefly {
     &::before {
-      background: #fff;
+      background: $on-event;
     }
     &::after {
-      background: #fff;
-      box-shadow: 0 0 0vw 0vw yellow;
+      background: $on-event;
+      // box-shadow: 0 0 0vw 0vw $on-event;
     }
   }
 
